syntax = "proto3";
option java_multiple_files = true;
package com.acuver.kpl.order_components;

message CreateOrderReq {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateOrderRes {
  string product_id = 1;
  bool success = 2;
}

service OrderService {
  rpc createOrder(CreateOrderReq) returns (CreateOrderRes);
}